# rustypy-backtest-engine

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
python/: __init__.py  pybacktest_extensions.py  test_rust_integration.py
python/rustypy_backtest_engine/: __init__.py
src/: lib.rs
src/backtesting/: engine.rs  mod.rs  order.rs  position.rs  status.rs  trade.rs
src/python_bindings/: api.rs  mod.rs
src/strategy/: mod.rs
src/utils/: logger.rs  mod.rs  profiler.rs  types.rs
tests/test_data/: sample_data.csv
