[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustypy-backtest-engine"
version = "0.1.0"
description = "High-performance backtesting engine implemented in Rust with Python bindings"
authors = [
    {name = "Haoqing Wu", email = "wuhaoqing28@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["trading", "backtesting", "finance", "rust", "performance"]
dependencies = [
    # Core dependencies only
    "polars>=1.30.0",
    "pandas>=2.2.3",
    "numpy>=1.24.0",
    # Optional visualization dependencies
    "matplotlib>=3.7.0",
    "plotly>=6.0.0",
    "ipykernel>=6.29.5",
    "cvxpy>=1.6.6",
    "maturin>=1.8.7",
    "nbformat>=4.2.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "maturin>=1.8.7",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# Full feature set for trading
trading = [
    "python-binance>=1.0.0",
    "catboost>=1.2.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.60.0",
    "arrow>=1.3.0",
    "pyarrow>=10.0.0",
]

[project.urls]
Repository = "https://github.com/HaoqingWu/rustypy-backtest-engine"
Homepage = "https://github.com/HaoqingWu/rustypy-backtest-engine"
Documentation = "https://github.com/HaoqingWu/rustypy-backtest-engine#readme"
Issues = "https://github.com/HaoqingWu/rustypy-backtest-engine/issues"

[tool.maturin]
python-source = "python"
module-name = "rustypy_backtest_engine.rustypy_backtest_engine"

